elements overlapping solved

--- a/res/app.css
+++ b/res/app.css
@@ -102,9 +102,9 @@ button {
 .leftToolbar {
   position: fixed;
   display: flex;
-  width: 3.75rem;
+  width: 3.45rem;
   height: 61%;
-  left: 1rem;
+  left: 0.5rem;
   top: 15%;
   background: rgb(110, 110, 110);
 
@@ -130,7 +130,7 @@ button {
   display: flex;
   width: 35.39px;
   height: 35.39px;
-  left: -2.2rem;
+  left: -2.5rem;
   background: transparent;
   margin-top: 10px;
   border: none;
@@ -141,11 +141,11 @@ button {
 }
 
 .hr {
-  position: relative;
+  position: absolute;
   display: flex;
-  width: 43.39px;
+  width: 39.39px;
   height: 0px;
-  left: -37px;
+  left: 3px;
   background: #e0c081;
   border: 1px solid #e0c081;
   margin-top: 0px;
@@ -156,7 +156,7 @@ button {
   display: flex;
   width: 23px;
   height: 23px;
-  left: 0.6rem;
+  left: 0.4rem;
   top: 90%;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background: transparent;
@@ -165,9 +165,9 @@ button {
 
 .helpDivider {
   position: absolute;
-  width: 43.39px;
+  width: 39.39px;
   height: 0px;
-  left: 7%;
+  left: 6%;
   top: 86%;
   border: 1px solid #e0c081;
   background: #e0c081;
@@ -190,13 +190,13 @@ button {
   font-size: 14px;
   line-height: 17px;
   margin-left: 80%;
-  margin-top:4%;
+  margin-top: 4%;
 }
 .login:hover {
   color: rgba(224, 192, 129, 1);
 }
 .loginText {
-  position:relative;
+  position: relative;
   display: flex;
   left: 60%;
   top: -20%;
@@ -249,7 +249,6 @@ button {
   top: 6%;
   left: 5%;
   background: rgb(110, 110, 110);
-  mix-blend-mode: difference;
   opacity: 1;
   border-radius: 24px;
   z-index: 0;
@@ -317,18 +316,23 @@ option {
   border-radius: 10px;
   z-index: 101;
 }
+.viewControlContainer {
+  position: relative;
+  margin-right: 10px;
+}
 
 .viewControl {
   position: absolute;
   background: transparent;
-  left: 10%;
-  top: 70%;
+  top: 68vh;
+  left: 17vw;
+  margin-right: 10vw;
 }
 #slider {
-  position: fixed;
+  position: absolute;
   display: flex;
-  top:84%;
-  left: 14%;
+  top: 84vh;
+  left: 24vw;
   width: auto;
   height: 0.4em;
   background: linear-gradient(
@@ -343,36 +347,31 @@ option {
 }
 
 .xAxis {
-  position: fixed;
+  position: absolute;
   display: flex;
-  width: 45%;
+  width: 40vw;
   height: 0px;
-  left: 10%;
-  top: 80%;
+  left: 18vw;
+  top: 80vh;
   background: #e0c081;
   border: 1px solid #e0c081;
 }
 
 .yAxis {
-  position: fixed;
-  display: flex;
+  position: absolute;
   width: 0px;
-  height: 70%;
-  left: 13%;
+  height: 62vh;
+  left: 19vw;
   background-color: #e0c081;
-  top: 16%;
-
+  top: 24vh;
+  margin-left: 2.5vh;
   border: 1px solid #e0c081;
 }
 
 .layerSelector {
   position: absolute;
   display: block;
-  flex-direction: row;
-  height: 6.25rem;
-  width: 1rem;
-  left: 0%;
-  top: 8%;
+  left:-5px;
 }
 
 .layer {
@@ -394,8 +393,7 @@ option {
   height: 18px;
   display: flex;
   position: relative;
-  top:10px;
-
+  top: 10px;
 }
 .play {
   background-color: transparent;
@@ -404,14 +402,12 @@ option {
   height: 18px;
   display: flex;
   position: relative;
-  top:-8px;
+  top: -8px;
   left: 18px;
-  
 }
 .imgPause {
   width: 18px;
   height: 18px;
-  left: -10px;
 }
 .imgPlay {
   width: 18px;
@@ -440,111 +436,42 @@ option {
 
 @media screen and (max-width: 600px) {
   .leftToolbar {
-    left: 80%
+    left: 80%;
   }
-  .yAxis{
+  .yAxis {
     display: none;
   }
   .xAxis {
-    display:none;
+    display: none;
     width: 0px;
   }
 
   .viewControl {
-    left: 1%;
-    top: 75%
+    left: 0%;
+    top: 75vh;
+   
   }
   #slider {
-    position:fixed;
+    position: fixed;
     top: 75%;
     left: 15%;
   }
 
   .selectContainer {
     width: 80%;
-    top:10%;
+    top: 10%;
   }
-  .titleText{
+  .titleText {
     font-size: max(24px, 2vw);
     font-weight: bold;
   }
-  .login{
+  .login {
     display: none;
   }
-  .subtitleText{
+  .subtitleText {
     font-size: max(18px, 1.5vw);
   }
   .horDivider {
-    display: none; 
-  }
-}
-
-/* Media queries for mobile visualization */
-
-/* @media screen and (max-width: 600px) {
-  .leftToolbar {
-    left: 15px;
-    top: 100px;
-  }
-
-  .hr {
-    height: 0px;
-    left: 22px;
-  }
-
-  .viewControl {
-    left: 5em;
-    top: 500px;
-  }
-
-  .xAxis {
-    display: none;
-  }
-  .yAxis {
     display: none;
   }
 }
-
-@media screen and (max-width: 1000px) {
-  .viewControl {
-    left: 5em;
-    top: 500px;
-  }
-  .helpDivider {
-    left: 23px;
-  }
-
-  .xAxis {
-    display: none;
-  }
-  .yAxis {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .viewControl {
-    left: 5em;
-    top: 500px;
-  }
-
-  .xAxis {
-    display: none;
-  }
-  .yAxis {
-    display: none;
-  }
-}
-@media screen and (max-width: 1500px) {
-  .viewControl {
-    left: 5em;
-    top: 500px;
-  }
-
-  .xAxis {
-    display: none;
-  }
-  .yAxis {
-    display: none;
-  }
-} */
